# fastapi-html-template

./: .env.example  pyproject.toml
src/api/: main.py
src/api/routing/: __init__.py
src/api/utils/: __init__.py  database.py  redis.py
src/web/templates/: _base.html
