[tool.poetry]
name = "fastapi-html-template"
version = "0.1.0"
description = "A template priject for creating HTML-serving sites with FastAPI."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
repository = "https://github.com/vcokltfre/fastapi-html-template"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
fastapi = "^0.66.0"
python-dotenv = "^0.18.0"
asyncpg = "^0.23.0"
starlette-discord = "^0.1.1"
taskipy = "^1.8.1"
aioredis = "^1.3.1"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.taskipy.tasks]
watch = "uvicorn src.api.main:app --reload"
start = "uvicorn src.api.main:app --host 0.0.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
